# hangpost-app

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRODUCT_VISION.md  README.md  SCALING_PLAN.md  SECURITY.md  SESSION_CONTEXT.md  matching_algorithms_explainer.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: evaluation_output.csv  judge_labels.jsonl  test_profiles.csv  test_profiles_10k.csv
docs/: BENCHMARKS.md  DATA_CARD.md  DEPLOY_HF_SPACE.md  MODEL_CARD.md
examples/: demo.py  embeddings_demo.py  random_sample_ranking.py
models/: learned_ranker.joblib
notebooks/: 00_smoke_test.ipynb  01_eda.ipynb  02_evaluation.ipynb  README.md
scripts/: bench.py  evaluate.py  evaluate_matches.py  generate_profiles.py  gold_label.py  init_db.py  label.py  make_plots.py  migrate_csv_to_db.py  profile_builder.py  profile_builder_cli.py  refresh_results.sh  train.py
space/: README.md  app.py  requirements.txt  smoke_test.py
space/data/: test_profiles.csv
src/hangpost_matching/: __init__.py  data.py  db.py  embeddings.py  evaluation.py  learning.py  llm_judge.py  loader.py  models.py  options.py  scoring.py  server.py
src/hangpost_matching/ml/: __init__.py  datasets.py  eval.py  features.py
tests/: test_db.py  test_diversity_subgroup.py  test_embeddings.py  test_evaluation.py  test_learning.py  test_llm_judge.py  test_scoring.py  test_server.py
