[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangpost-matching"
version = "0.1.0"
description = "Transparent profile recommendation and ranking prototype"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
ml = [
    "numpy>=1.24",
    "sentence-transformers>=2.7",
    "lightgbm>=4.0",
    "joblib>=1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "examples", "scripts"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*", "lightgbm", "lightgbm.*", "joblib", "joblib.*", "sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true
