[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangpost-matching"
version = "0.1.0"
description = "Friend-recommendation ranker for a location-based social app — rules, sentence-transformer embeddings, and LightGBM learning-to-rank under one Ranker Protocol."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ai-bryguy101"},
]
keywords = [
    "recommendation-system",
    "learning-to-rank",
    "lightgbm",
    "sentence-transformers",
    "information-retrieval",
    "ndcg",
    "llm-as-judge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ai-bryguy101/hangpost-app"
Repository = "https://github.com/ai-bryguy101/hangpost-app"
Issues = "https://github.com/ai-bryguy101/hangpost-app/issues"
"Live demo" = "https://huggingface.co/spaces/thisaiguybry/hangpost"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
ml = [
    "numpy>=1.24",
    "pandas>=2.0",
    "sentence-transformers>=2.7",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "mlflow>=2.10",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]
judge = [
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "notebooks", "space"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "examples", "scripts"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "pytest", "pytest.*",
    "lightgbm", "lightgbm.*",
    "joblib", "joblib.*",
    "sentence_transformers", "sentence_transformers.*",
    "fastapi", "fastapi.*",
    "pydantic", "pydantic.*",
    "uvicorn", "uvicorn.*",
    "mlflow", "mlflow.*",
    "anthropic", "anthropic.*",
    "pandas", "pandas.*",
]
ignore_missing_imports = true
